<resources>
    <!-- income and outcome-->
    <string name="app_name">AccountPlus</string>
    <string name="income_january">1月收入</string>
    <string name="income_february">2月收入</string>
    <string name="income_march">3月收入</string>
    <string name="income_april">4月收入</string>
    <string name="income_may">5月收入</string>
    <string name="income_june">6月收入</string>
    <string name="income_july">7月收入</string>
    <string name="income_august">8月收入</string>
    <string name="income_september">9月收入</string>
    <string name="income_october">10月收入</string>
    <string name="income_november">11月收入</string>
    <string name="income_december">12月收入</string>

    <string name="outcome_january">1月支出</string>
    <string name="outcome_february">2月支出</string>
    <string name="outcome_march">3月支出</string>
    <string name="outcome_april">4月支出</string>
    <string name="outcome_may">5月支出</string>
    <string name="outcome_june">6月支出</string>
    <string name="outcome_july">7月支出</string>
    <string name="outcome_august">8月支出</string>
    <string name="outcome_september">9月支出</string>
    <string name="outcome_october">10月支出</string>
    <string name="outcome_november">11月支出</string>
    <string name="outcome_december">12月支出</string>

    <string name="remained_budget">预算剩余</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="type_bag">箱包</string>
    <string name="type_book">书费</string>
    <string name="type_bus">交通</string>
    <string name="type_clothes">衣服</string>
    <string name="type_film">电影</string>
    <string name="type_food">食物</string>
    <string name="type_game">游戏</string>
    <string name="type_gift">礼物</string>
    <string name="type_house">房租</string>
    <string name="type_internet">网费</string>
    <string name="type_medicine">医药</string>
    <string name="type_normal">一般</string>
    <string name="type_phone">话费</string>
    <string name="type_pocket">零钱</string>
    <string name="type_salary">工资</string>
    <string name="type_snack">零食</string>
    <string name="type_travel">旅游</string>
    <string name="input_old_password" >请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="wrong_password">密码输入错误</string>
    <string name="set_password_success">密码设置成功</string>

    <string name="suggestion">建议</string>
    <string name="problem">出错</string>
    <string name="send">发送</string>
</resources>
