<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_light_light_gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/feedback_button_pressed"
            android:text="@string/suggestion"
            android:textSize="@dimen/feedback_text_size"
            android:textColor="@color/white"/>
        <View
            android:layout_width="40dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/feedback_button_not_pressed"
            android:text="@string/problem"
            android:textSize="@dimen/feedback_text_size"
            android:textColor="@color/black"/>
    </LinearLayout>
    <EditText
        android:id="@+id/text"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_text_frame_height"
        android:background="@drawable/feedback_text_frame"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@color/toolbar_green"/>
    <Button
        android:id="@+id/send"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/send"
        android:textSize="@dimen/feedback_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/feedback_button_pressed"/>
</LinearLayout>