<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.happycoding.uniquehust.accountplus.details.MainActivity">

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_toolbar_height"
        android:background="@color/dark_blue"
        android:layout_alignParentBottom="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/account_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/account_list_to_top"
        android:layout_above="@id/bottom_bar">

    </android.support.v7.widget.RecyclerView>
    <com.yuan.waveview.WaveView
        android:id="@+id/budget_message"
        android:layout_width="@dimen/wave_view_diameter"
        android:layout_height="@dimen/wave_view_diameter"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:backgroudColor="@color/white"
        app:progressColor="@color/toolbar_green_light"
        app:max="20"
        />

    <TextView
        android:text="@string/remained_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/remained_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remained_budget"/>
    <TextView
        android:id="@+id/month_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:layout_alignParentTop="true"
        android:text="@string/income_april"/>
    <TextView
        android:id="@+id/income_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/month_income"
        android:paddingLeft="30dp"
        android:text="0"/>

    <TextView
        android:id="@+id/month_outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/budget_message"
        android:layout_marginLeft="30dp"
        android:text="@string/outcome_april"/>
    <TextView
        android:id="@+id/outcome_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/month_outcome"
        android:layout_toRightOf="@id/budget_message"
        android:layout_marginLeft="30dp"
        android:text="0"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/diagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="图表"/>

    <Button
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="明细"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
         />

</RelativeLayout>
